--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "5.4.3",
   "description": "After Effects plugin for exporting animations to SVG + JavaScript or canvas + JavaScript",
   "main": "./build/player/lottie.js",
+  "types": "./types/lottie.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/airbnb/lottie-web.git"
